<resources>
    <string name="app_name">Kudo POS Retail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Masuk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Masuk atau daftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="error_invalid_email">Alamat Email tidak valid</string>
    <string name="error_invalid_password">Sandi terlalu pendek</string>
    <string name="error_incorrect_password">Sandi yang dimasukan salah</string>
    <string name="error_field_required">Wajib diisi</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="debit_credit">Kartu Debit/Kredit</string>
    <string name="cash">Tunai</string>
    <string name="alert_dialog_ok">Iya</string>
    <string name="alert_dialog_cancel">Batal</string>
    <string name="title_choose_another_payment_method">"Apakah Anda ingin memilih metode pembayaran yang lain?"</string>
    <string name="cancel">Batal</string>
    <string name="confirm">Konfirm</string>
    <string name="clear">Hapus</string>
    <string name="settlement">Settlement</string>
    <string name="menu_void">Batalkan Transaksi</string>
    <string name="menu_history">Rekam Transaksi</string>
    <string name="action_cart">Keranjang</string>
</resources>
