<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_cart"
        android:title="@string/action_cart"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_shopping_cart"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_void"
        android:title="@string/menu_void"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_settlement"
        android:title="@string/settlement"
        android:orderInCategory="4"
        app:showAsAction="never"/>

</menu>